--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,27 @@
 version: '3.7'
 services:
+
+  kanban:
+    build:
+      context: ./
+      args:
+        ALPINE_SERVER: 192.168.11.200
+        NPM_PROXY: http://192.168.11.200:8080/
+    ports:
+    - 8080:3000
+    volumes:
+    - ./:/app
+
   redimne:
     image: redmine:3
     ports:
-      - 8080:3000
+    - 8081:3000
     environment:
       REDMINE_DB_MYSQL: mysql
       REDMINE_DB_PASSWORD: root
       REDMINE_DB_ENCODING: utf8mb4
     depends_on:
-      - mysql
+    - mysql
 
   mysql:
     image: mysql:5.7
