--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3"
   },
   "devDependencies": {},
