vue.jsでチケット表示する

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "webpackw": "webpack -w --watch-poll"
   },
   "repository": {
     "type": "git",
